@@ -1172,6 +1172,28 @@ parameter_list|)
 throws|throws
 name|HiveException
 block|{
+name|createTable
+argument_list|(
+name|tbl
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Creates the table with the give objects    * @param tbl a table object    * @param ifNotExists if true, ignore AlreadyExistsException    * @throws HiveException    */
+specifier|public
+name|void
+name|createTable
+parameter_list|(
+name|Table
+name|tbl
+parameter_list|,
+name|boolean
+name|ifNotExists
+parameter_list|)
+throws|throws
+name|HiveException
+block|{
 try|try
 block|{
 name|tbl
@@ -1229,6 +1251,27 @@ name|getTTable
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|AlreadyExistsException
+name|e
+parameter_list|)
+block|{
+if|if
+condition|(
+operator|!
+name|ifNotExists
+condition|)
+block|{
+throw|throw
+operator|new
+name|HiveException
+argument_list|(
+name|e
+argument_list|)
+throw|;
+block|}
 block|}
 catch|catch
 parameter_list|(
