@@ -195,6 +195,9 @@ name|String
 argument_list|>
 name|mapProp
 decl_stmt|;
+name|boolean
+name|ifNotExists
+decl_stmt|;
 specifier|public
 name|createTableDesc
 parameter_list|(
@@ -265,6 +268,9 @@ argument_list|,
 name|String
 argument_list|>
 name|mapProp
+parameter_list|,
+name|boolean
+name|ifNotExists
 parameter_list|)
 block|{
 name|this
@@ -368,6 +374,43 @@ operator|.
 name|mapProp
 operator|=
 name|mapProp
+expr_stmt|;
+name|this
+operator|.
+name|ifNotExists
+operator|=
+name|ifNotExists
+expr_stmt|;
+block|}
+annotation|@
+name|explain
+argument_list|(
+name|displayName
+operator|=
+literal|"if not exists"
+argument_list|)
+specifier|public
+name|boolean
+name|getIfNotExists
+parameter_list|()
+block|{
+return|return
+name|ifNotExists
+return|;
+block|}
+specifier|public
+name|void
+name|setIfNotExists
+parameter_list|(
+name|boolean
+name|ifNotExists
+parameter_list|)
+block|{
+name|this
+operator|.
+name|ifNotExists
+operator|=
+name|ifNotExists
 expr_stmt|;
 block|}
 annotation|@
