@@ -10,6 +10,7 @@ STAGE PLANS:
         Create Table
           columns: key int, value string
           field delimiter: 	
+          if not exists: false
           input format: org.apache.hadoop.mapred.TextInputFormat
           # buckets: -1
           output format: org.apache.hadoop.hive.ql.io.IgnoreKeyTextOutputFormat
